--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=filesharingapp
 spring.datasource.url=jdbc:mysql://localhost:3306/filesharingapp
 spring.datasource.username=root
-spring.datasource.password=sonali123
+spring.datasource.password=shai123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
